--- a/src/main/resources/templates/bookSearch.html
+++ b/src/main/resources/templates/bookSearch.html
@@ -12,7 +12,7 @@
 </form>
 <ul th:if="${books}">
     <li th:each="book:${books}">
-        <a th:href="${book.isbn}" th:text="${book.title}"></a>
+        <a th:href="@{/book/{bookId}(bookId=${book.isbn})}" th:text="${book.title}"></a>
     </li>
 </ul>
 </body>
