--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -10,6 +10,9 @@
     <p th:text="${book.title}">타이틀</p>
     <p th:text="${book.publisher}">출판사</p>
     <p th:text="${book.publishYear}">출판년도</p>
+    <p th:text="${book.description}">책 소개</p>
+    <a th:href="${book.bookInfoUrl}">다음 책 소개 링크</a>
+    <img th:src="${book.thumbnailUrl}" alt="">
 </div>
 
 <div>
