[feat] draw library map by kakao map api

--- a/src/main/resources/templates/prox-libraries.html
+++ b/src/main/resources/templates/prox-libraries.html
@@ -9,6 +9,11 @@
 <ul id="result">
 
 </ul>
+<hr>
+<div id="map" style="width:500px;height:400px;">
+
+</div>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e48295ca4d3ba331a2260d45fe05f230&autoload=false"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script th:src="@{/js/proxlibraryQuery.js}"></script>
 </body>
