--- a/src/main/resources/templates/prox-libraries.html
+++ b/src/main/resources/templates/prox-libraries.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>내 근처의 도서관</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<h1>내 근처의 도서관 검색하기</h1>
-<ul id="result">
-
-</ul>
-<hr>
-<div id="map" style="width:500px;height:400px;">
-
+<div class="container">
+    <h1>내 근처의 도서관 검색하기</h1>
+    <div class="row h-100">
+        <div class="col-6">
+            <!-- map -->
+            <div id="map" class="w-100 h-100">
+            </div>
+        </div>
+        <div class="col-6">
+            <!-- list of library --->
+            <ul id="result">
+            </ul>
+        </div>
+    </div>
 </div>
+
+<!-- script area -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e48295ca4d3ba331a2260d45fe05f230&autoload=false"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script th:src="@{/js/proxlibraryQuery.js}"></script>
