[modify] controllers and templates

--- a/src/main/resources/templates/bookSearch.html
+++ b/src/main/resources/templates/bookSearch.html
@@ -5,6 +5,7 @@
     <title>책검색서비스</title>
 </head>
 <body>
+<!-- 책 검색 페이지 -->
 <form action="/book/search" method="get">
     <label for="title">책 제목 검색</label>
     <input type="text" id="title" name="title">
