--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>책검색서비스</title>
 </head>
 <body>
+<!-- 메인 페이지 -->
 <a href="/book/search">책 검색하러 가기</a>
 <a href="/library/prox-library">내 주변 도서관 검색하기</a>
 </body>
