--- a/src/main/resources/templates/prox-libraries.html
+++ b/src/main/resources/templates/prox-libraries.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<!-- 내 근처의 도서관 정보 -->
 <div class="container">
     <h1>내 근처의 도서관 검색하기</h1>
     <div class="row h-100">
