--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -12,12 +12,11 @@
 <div>
     <button id="prox-book">책을 가지고 있는 근처 도서관 검색하기</button>
 </div>
-<div>
-    <url id="result">
-
-    </url>
+<div id="result">
 </div>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script th:src="@{/js/libraryQuery.js}"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e48295ca4d3ba331a2260d45fe05f230&autoload=false"></script>
+<script th:src="@{/js/kakaoMap.js}"></script>
+<script th:src="@{/js/proxBook.js}"></script>
 </body>
 </html>
