--- a/src/main/resources/templates/fragments/libraries-with-map.html
+++ b/src/main/resources/templates/fragments/libraries-with-map.html
@@ -1,9 +1,7 @@
 <div id="libraries" th:fragment="libraryWithMap(userProxLibrary)">
-    <div id="map"></div>
+    <div id="map" style="width: 500px;height: 500px" th:data-lat="${userProxLibrary.latitude}" th:data-lng="${userProxLibrary.longitude}"></div>
     <div id="library-list">
         <p>도서관 카운트 = <span th:text="${userProxLibrary.count}">도서관 카운트</span></p>
-        <ul th:replace="fragments/library-list.html :: libraryList(${userProxLibrary.libraries})">
-
-        </ul>
+        <ul th:replace="fragments/library-list.html :: libraryList(${userProxLibrary.libraries})"></ul>
     </div>
 </div>
