--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -17,7 +17,7 @@
             <form role="search" action="/book/search" method="get">
                 <div class="input-group">
                     <input class="form-control" id="title" name="title" placeholder="책 검색하기" aria-label="책 검색하기">
-                    <button type="submit" class="btn btn-outline-secondary">검색하기</button>
+                    <button type="submit" class="btn btn-outline-secondary">검색</button>
                 </div>
             </form>
         </div>
