--- a/src/main/resources/templates/fragments/libraries-with-map.html
+++ b/src/main/resources/templates/fragments/libraries-with-map.html
@@ -1,7 +1,11 @@
-<div id="libraries" th:fragment="libraryWithMap(userProxLibrary)">
-    <div id="map" style="width: 500px;height: 500px" th:data-lat="${userProxLibrary.latitude}" th:data-lng="${userProxLibrary.longitude}"></div>
-    <div id="library-list">
-        <p>도서관 카운트 = <span th:text="${userProxLibrary.count}">도서관 카운트</span></p>
-        <ul th:replace="fragments/library-list.html :: libraryList(${userProxLibrary.libraries})"></ul>
+<div class="row" id="libraries" th:fragment="libraryWithMap(userProxLibrary)">
+    <div id="map" th:data-lat="${userProxLibrary.latitude}" th:data-lng="${userProxLibrary.longitude}" class="col-md-9 col-12 h-100"></div>
+    <div id="library-list" class="col-12 col-md-3 h-100 d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary">
+        <div class="d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom">
+            <strong>도서관 개수 = <span th:text="${userProxLibrary.count}">도서관 카운트</span></strong>
+        </div>
+        <div >
+            <ul th:replace="fragments/library-list.html :: libraryList(${userProxLibrary.libraries})"></ul>
+        </div>
     </div>
 </div>
