--- a/src/main/resources/templates/fragments/prox-library.html
+++ b/src/main/resources/templates/fragments/prox-library.html
@@ -1,4 +1,4 @@
 <div>
     <div th:replace="fragments/shorten-url.html::shorten(${userProxLibrary.url})"></div>
-    <div th:replace="fragments/libraries-with-map.html::libraryWithMap(${userProxLibrary})"></div>
+    <div th:replace="fragments/libraries-with-map.html::proxLibraryWithMap(${userProxLibrary})"></div>
 </div>
