--- a/src/main/resources/templates/fragments/library-list.html
+++ b/src/main/resources/templates/fragments/library-list.html
@@ -1,5 +1,5 @@
-<ul id="lib-ul" th:fragment="libraryList(libraries)" class="list-group list-group-flush border-bottom scrollarea">
-    <li th:each="proxLibrary : ${libraries}" th:id="${proxLibrary.library.libraryCode}" th:data-lat="${proxLibrary.library.latitude}" th:data-lng="${proxLibrary.library.longitude}" class="list-group-item list-group-item-action py-3 lh-sm w-100">
+<ul id="lib-ul" th:fragment="proxLibraryList(proxLibraries)" class="list-group list-group-flush border-bottom scrollarea">
+    <li th:each="proxLibrary : ${proxLibraries}" th:id="${proxLibrary.library.libraryCode}" th:data-lat="${proxLibrary.library.latitude}" th:data-lng="${proxLibrary.library.longitude}" class="list-group-item list-group-item-action py-3 lh-sm w-100">
         <p>
             <strong th:text="${proxLibrary.library.name}">
                 도서관 제목
@@ -9,6 +9,18 @@
             거리 : <span th:text="${#numbers.formatDecimal(proxLibrary.distance, 1,2)}">거리</span> km
         </div>
         <p th:text="${proxLibrary.library.address}">도서관 주소</p>
-        <a th:href="${proxLibrary.library.webpage}" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">도서관 홈페이지로 가기</a>
+        <a th:href="${proxLibrary.library.webpage}" class="link-secofndary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">도서관 홈페이지로 가기</a>
+    </li>
+</ul>
+
+<ul id="lib-ul" th:fragment="libraryList(libraries)" class="list-group list-group-flush border-bottom scrollarea">
+    <li th:each="library : ${libraries}" th:id="${library.libraryCode}" th:data-lat="${library.latitude}" th:data-lng="${library.longitude}" class="list-group-item list-group-item-action py-3 lh-sm w-100">
+        <p>
+            <strong th:text="${library.name}">
+                도서관 제목
+            </strong>
+        </p>
+        <p th:text="${library.address}">도서관 주소</p>
+        <a th:href="${library.webpage}" class="link-secofndary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank">도서관 홈페이지로 가기</a>
     </li>
 </ul>
