--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -13,6 +13,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/book/search">책 검색하기</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/library/search">도서관 검색하기</a>
+                </li>
             </ul>
             <form role="search" action="/book/search" method="get">
                 <div class="input-group">
