--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Eleventh navbar example" th:fragment="nav">
+<nav class="navbar navbar-expand-lg bg-body-tertiary rounded mb-2" th:fragment="nav">
     <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">Proxbook</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
