--- a/src/main/resources/templates/librarySearch.html
+++ b/src/main/resources/templates/librarySearch.html
@@ -12,9 +12,14 @@
 <div class="container">
     <!-- 책 검색 페이지 -->
     <form action="/library/search" method="get">
-        <label for="name">도서관 검색</label>
-        <input type="text" id="name" name="name">
-        <button type="submit">검색하기</button>
+        <div class="input-group mb-3">
+            <span class="input-group-text">도서관 검색</span>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="title" placeholder="도서관 이름 검색">
+                <label for="title">도서관 이름 검색</label>
+            </div>
+            <button type="submit" class="btn btn-outline-secondary">검색</button>
+        </div>
     </form>
     <th:block th:if="${searchedLibraries}">
         <div th:replace="fragments/libraries-with-map.html::searchedLibraryWithMap(${searchedLibraries})"></div>
