--- a/src/main/resources/templates/fragments/book.html
+++ b/src/main/resources/templates/fragments/book.html
@@ -37,5 +37,5 @@
                 <a th:href="${book.bookInfoUrl}" class="icon-link gap-1 icon-link-hover">[다음카카오] 책소개링크</a>
             </div>
         </div>
-    </div>
+    </div><!-- end of book info -->
 </div>
