--- a/src/main/resources/templates/librarySearch.html
+++ b/src/main/resources/templates/librarySearch.html
@@ -15,8 +15,8 @@
         <div class="input-group mb-3">
             <span class="input-group-text">도서관 검색</span>
             <div class="form-floating">
-                <input type="text" class="form-control" id="title" name="title" placeholder="도서관 이름 검색">
-                <label for="title">도서관 이름 검색</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="도서관 이름 검색">
+                <label for="name">도서관 이름 검색</label>
             </div>
             <button type="submit" class="btn btn-outline-secondary">검색</button>
         </div>
