--- a/src/main/resources/templates/librarySearch.html
+++ b/src/main/resources/templates/librarySearch.html
@@ -11,14 +11,30 @@
 
 <div class="container">
     <!-- 책 검색 페이지 -->
-    <form action="/library/search" method="get">
+    <form action="/library/search" method="get" th:object="${form}">
         <div class="input-group mb-3">
             <span class="input-group-text">도서관 검색</span>
             <div class="form-floating">
-                <input type="text" class="form-control" id="name" name="name" placeholder="도서관 이름 검색">
-                <label for="name">도서관 이름 검색</label>
+                <input type="text" class="form-control" th:field="*{name}" placeholder="도서관 이름 검색">
+                <label th:for="name">도서관 이름 검색</label>
             </div>
             <button type="submit" class="btn btn-outline-secondary">검색</button>
+        </div>
+        <div>
+            <details>
+                <summary>
+                    검색옵션
+                </summary>
+                <th:block th:each="option : ${options}">
+                    <input type="radio" th:field="*{option}"
+                        th:value="${option.name()}"
+                    >
+                    <label
+                            th:for="${#ids.prev('option')}"
+                            th:text="${option.description}"
+                    ></label>
+                </th:block>
+            </details>
         </div>
     </form>
     <th:block th:if="${searchedLibraries}">
