--- a/src/main/resources/templates/librarySearch.html
+++ b/src/main/resources/templates/librarySearch.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <!-- 책 검색 페이지 -->
-    <form action="/library/search" method="get" th:object="${form}">
+    <form action="/library/search" method="get" th:object="${form}" class="pb-2 mb-2 border-bottom">
         <div class="input-group mb-3">
             <span class="input-group-text">도서관 검색</span>
             <div class="form-floating">
@@ -20,21 +20,30 @@
             </div>
             <button type="submit" class="btn btn-outline-secondary">검색</button>
         </div>
-        <div>
-            <details>
-                <summary>
-                    검색옵션
-                </summary>
-                <th:block th:each="option : ${options}">
-                    <input type="radio" th:field="*{option}"
+        <button type="button"
+                class="btn btn-outline-dark collapsed border-0 w-100"
+                data-bs-toggle="collapse"
+                data-bs-target="#options" aria-expanded="false" aria-controls="options"
+        >
+            검색 옵션
+        </button>
+        <div
+            class="collapse my-2 px-3 card card-body" id="options"
+        >
+            <div
+                    th:each="option : ${options}"
+            >
+                <input
+                        class="form-check-input"
+                        type="radio" th:field="*{option}"
                         th:value="${option.name()}"
-                    >
-                    <label
-                            th:for="${#ids.prev('option')}"
-                            th:text="${option.description}"
-                    ></label>
-                </th:block>
-            </details>
+                >
+                <label
+                        class="form-check-label"
+                        th:for="${#ids.prev('option')}"
+                        th:text="${option.description}"
+                ></label>
+            </div>
         </div>
     </form>
     <th:block th:if="${searchedLibraries}">
@@ -44,6 +53,5 @@
 
 <th:block th:replace="fragments/static/static-import.html::js"></th:block>
 <script th:src="@{/js/userProxLibrary.js}"></script>
-
 </body>
 </html>
