--- a/src/main/resources/templates/admin/book-error-log/book-error.html
+++ b/src/main/resources/templates/admin/book-error-log/book-error.html
@@ -3,15 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>ADMIN : book error log</title>
+    <th:block th:replace="fragments/static/static-import.html::css"></th:block>
 </head>
 <body>
+<nav th:replace="fragments/nav.html::nav"></nav>
 <div class="container">
+    <h1>책 정정 요청</h1>
     <div th:replace="fragments/book.html :: book(${log.book})"></div>
+    <hr>
+    <div>
+        <p>다음과 같은 사유로 에러가 </p>
+        <p th:text="${log.reason}"> 정정요청 사유 </p>
+    </div>
     <div>
         <button id="delete-book"
                 th:data-action="@{/book-error/{log-id}(log-id=${log.id})}"
         >
-            삭제하기
+            책 정보 삭제하기
         </button>
     </div>
     <div id="result">
